--- a/home.html
+++ b/home.html
@@ -13,15 +13,16 @@
     <div id="header-placeholder"></div>
 
     <!-- Main Content -->
-    <div class="p-4">
+    <div class="p-4 mb-20">
         <div class="flex justify-between items-center">
             <h2 class="text-xl font-bold">Welcome Back!</h2>
             <!-- Weather Widget -->
             <div class="flex items-center space-x-2 bg-blue-100 p-2 rounded">
                 <div class="text-blue-500">
                     <!-- Weather Icon -->
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 2a10 10 0 00-10 10h10V2zm0 0a10 10 0 0110 10h-9m0 0v10a10 10 0 01-10-10h10zm0 0a10 10 0 0110 10H12z" />
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="#000000" fill="none">
+                        <path d="M17 12C17 14.7614 14.7614 17 12 17C9.23858 17 7 14.7614 7 12C7 9.23858 9.23858 7 12 7C14.7614 7 17 9.23858 17 12Z" stroke="currentColor" stroke-width="1.5" />
+                        <path d="M12 2V3.5M12 20.5V22M19.0708 19.0713L18.0101 18.0106M5.98926 5.98926L4.9286 4.9286M22 12H20.5M3.5 12H2M19.0713 4.92871L18.0106 5.98937M5.98975 18.0107L4.92909 19.0714" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" />
                     </svg>
                 </div>
                 <div>
