--- a/journal.html
+++ b/journal.html
@@ -13,7 +13,7 @@
     <div id="header-placeholder"></div>
 
     <!-- Main Content -->
-    <div class="p-4">
+    <div class="p-4 mb-20">
         <!-- Tabs Navigation -->
         <div class="overflow-x-auto">
             <div class="flex space-x-4 border-b border-gray-300">
