--- a/prayer.html
+++ b/prayer.html
@@ -98,6 +98,7 @@
             <div id="quran-reader" class="tab-content hidden">
                 <h2 class="text-xl font-bold mb-2">Quran Reader</h2>
                 <!-- Quran Reader content goes here -->
+                <iframe src="https://quran.com" width="100%" height="600" frameborder="0"></iframe>
             </div>
 
             <!-- Dhikr Content -->
