--- a/prayer.html
+++ b/prayer.html
@@ -32,7 +32,10 @@
             <!-- Prayer Times Content -->
             <div id="prayer-times" class="tab-content hidden">
                 <h2 class="text-xl font-bold mb-2">Prayer Times</h2>
-                <iframe src="https://timesprayer.com/widgets.php?frame=2&amp;lang=en&amp;name=salt&amp;sound=true&amp;avachang=true&amp;method=8" style="border: none; overflow: hidden; width: 100%; height: 275px;"></iframe>
+                <section id="prayer-times-container">
+                    <!-- Prayer times widgets will be added here -->
+                </section>
+        
 
 
                 <!-- Additional Section: Current Streak, Prayer Tracking, and Daily Calendar -->
